# vs-code-template-rocket-league-plugin-with-aws-sdk

./: .gitignore  CMakeLists.txt  Dashboard.cpp  Dashboard.h  GuiBase.cpp  GuiBase.h  README.md  _config.yaml  all.bat  build.bat  copyDLL.bat  pch.h  vcpkg.json  vscode_config.bat
